fix(styles): enable dark mode by default

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -18,7 +18,7 @@
 @enable-ripple-effect:  @button-ripple;
 
 // Whether include styles for dark mode
-@enable-dark-mode:      false;
+@enable-dark-mode:      true;
 
 // Media queries breakpoints
 // Define the breakpoints at which your layout will change, adapting to different screen sizes.
